 navigate, go-back, go-forward, 
 current-url, register-navigate-handler, 
 unregister-navigate-handler, 
 current-document; show and event-handling
 method of mx-document% moved to the new class
constructor for mx-browser% takes same arguments
 as old constructor for mx-document%; style
 list may include 'scrollbars
added find-element-by-id-or-name
 to mx-document%
added focus method to mx-element%, 
 works with IE5 or newer only
removed getter and setter for whitespace
 and word-spacing properties, since not 
 implemented by IE4/5 for Windows
fixed GC-related problems with COM 
 event handlers

Version 101:

moved Windows event loop from mx-document% class
  initialization to unit
extra Windows processing loop handles only 
  WM_USER events, fixing various problems 
  running MysterX under DrScheme
added AddRef() for HTML elements, fixing
  occasional crashes on GC
added tag, id information for find-element
  failures
renamed mysterx.dll to mxmain.dll, moved all
  dll's to dlls subdirectory
added clean option to Makefile

Version 100:

made changes for IE5:
  added Chris Sells' wrapper object in MysPage code
  coclass->html and {insert,append}-object methods
    of mx-document% and mx-element% take width, height
    arguments
added call to CoUninitialize() from exit handler
  
Version 100alpha4:

added support for multidimensional arrays,
  with COM SAFEARRAYs stored column-major
added com-unregister-event-handler
COM event handlers accept named arguments
unit exit-handler forces Release() on global
  COM objects on exit
COM objects passed as VARIANTs in methods,
  properties 
garbage collection of COM objects passed to 
  COM event handlers works correctly
added procedures for com-type's,
  com-object-type and com-is-a?
procedures com-methods, com-get-properties, 
  com-set-properties, com-events,
  com-method-type, com-get-property-type,
  com-set-property-type, and 
  com-event-type allow a com-type
  in place of a com-object

Version 100alpha3:
