@@ -294,6 +294,8 @@ MX_PRIM_DECL(mx_element_replace_html);
 MX_PRIM_DECL(mx_element_insert_text);
 MX_PRIM_DECL(mx_element_append_text);
 MX_PRIM_DECL(mx_element_focus);
+MX_PRIM_DECL(mx_element_selection);
+MX_PRIM_DECL(mx_element_set_selection);
 MX_PRIM_DECL(mx_element_attribute);
 MX_PRIM_DECL(mx_element_set_attribute);
 MX_PRIM_DECL(mx_element_click);
